# bakermakersetuper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
include/: IconSetter.h  ThreadedExtractor.h  improgress.h
resources/: icon.rc
src/: ThreadedExtractor.cpp  main.cpp
src/libs/: IconSetter.cpp  imfilebrowser.cpp  improgress.cpp
windowsrc/: icon.rc
